# callable_auto_avsr

./: .gitignore  pyproject.toml
additional_modules/espnet/: main.py  pyproject.toml
additional_modules/espnet/espnet.egg-info/: PKG-INFO  SOURCES.txt
src/auto_avsr/: eval_video.py  lightning.py
src/auto_avsr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
