[project]
name = "auto-avsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "av>=16.0.1",
  "mediapipe==0.10.21",
  "pytorch-lightning>=2.6.0",
  "scikit-image>=0.25.2",
  "sentencepiece>=0.2.1",
  "torch>=2.9.1",
  "torchaudio>=2.9.1",
  "torchcodec>=0.8.1",
  "torchvision>=0.24.1",
  "espnet",
  "opencv-python",
]


[tool.setuptools.packages.find]
where = ["additional_modules/espnet", "src"]
include = ["*"]
exclude = ["tests*"]

[tool.uv.sources]
espnet = { path = "additional_modules/espnet", editable = true }

[dependency-groups]
dev = ["jupyterlab>=4.5.0", "scikit-learn>=1.7.2"]

[project.scripts]
vsr_baseline_autoavsr = "auto_avsr.eval_video:main"


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
